feat: more controls/data elements
